# stm32f4-libopencm3-freertos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  Makefile  Readme.md
cmake/: freertos.cmake  libopencm3.cmake
config/: FreeRTOSConfig.h
src/: hw_init.c  hw_init.h  i2c.c  i2c.h  main.c  spi.c  spi.h  usb.c  usb.h
src/ina232/: ina232.c  ina232.h
